force-app/main/default/objects/RetoursGC__e/RetoursGC__e.object-meta.xml
<CustomObject>
    <description>CGI-FSL : Platform Event utilisé par la GC pour les retours debrief des rendez-vous.</description>
    <label>RetoursGC</label>
    <pluralLabel>RetoursGC</pluralLabel>
</CustomObject>