force-app/main/default/objects/RetoursGC__e/fields/fsl_couleurPlanning__c.field-meta.xml
<CustomField>
    <fullName>fsl_couleurPlanning__c</fullName>
    <label>Couleur du diagramme de Gantt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>