force-app/main/default/objects/RetoursGC__e/fields/fsl_reservesGC__c.field-meta.xml
<CustomField>
    <fullName>fsl_reservesGC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CGI - FSL : Ce champ définit si le retour est fait depuis la GC ou pas</description>
    <label>Réserves GC</label>
    <type>Checkbox</type>
</CustomField>